# keyhive

./: .gitignore  1  CONTRIBUTING.md  Cargo.toml  HACKING.md  Makefile  README.md  TODO.md  flake.nix  sept_demo.ipynb  test-until-fail
beehive_core/: Cargo.toml
beehive_core/benches/: bench_cgka.rs
beehive_core/src/: ability.rs  access.rs  archive.rs  beehive.rs  capability.rs  cgka.rs  content.rs  context.rs  crypto.rs  error.rs  event.rs  lib.rs  listener.rs  principal.rs  scratch.rs  util.rs
beehive_core/src/cgka/: README.md  beekem.rs  change.rs  crypto.rs  encryption_key.rs  error.rs  keys.rs  message.rs  multikey_encrypted_secret_store.rs  operation.rs  secret_store.rs  test_utils.rs  tombstone.rs  treemath.rs
beehive_core/src/content/: reference.rs
beehive_core/src/crypto/: application_secret.rs  causal_key.rs  digest.rs  domain_separator.rs  encrypted.rs  envelope.rs  hash.rs  separable.rs  share_key.rs  signature.rs  signed.rs  signer.rs  signing_key.rs  siv.rs  symmetric_key.rs  verifiable.rs  verifying_key.rs
beehive_core/src/error/: nonexclusive_reference.rs  unknown_subject.rs
beehive_core/src/listener/: cgka.rs  deque.rs  membership.rs  no_listener.rs  prekey.rs
beehive_core/src/principal/: active.rs  agent.rs  auth_state.rs  document.rs  encryption_response.rs  group.rs  identifier.rs  individual.rs  membered.rs  peer.rs  public.rs  revocation_ops.rs  traits.rs  verifiable.rs
beehive_core/src/store/: revocation.rs
beehive_core/src/util/: content_addressed_map.rs  hash_map.rs  hash_set.rs  hasher.rs  hex.rs  hidden.rs  rc.rs  treemath.rs
beehive_group/: Cargo.toml
beehive_group/src/: access.rs  agent.rs  capability.rs  context.rs  crypto.rs  group.rs  hash.rs  lib.rs  operation.rs  principal.rs  scratch.rs  share.rs  store.rs  util.rs
beehive_group/src/agent/: document.rs  stateful.rs  stateless.rs  traits.rs
beehive_group/src/crypto/: encrypted.rs  hash.rs  share_key.rs  signed.rs
beehive_group/src/operation/: delegation.rs  revocation.rs  store.rs
beehive_group/src/principal/: active.rs  agent.rs  document.rs  group.rs  identifier.rs  individual.rs  membered.rs  stateful.rs  stateless.rs  store.rs  traits.rs
beehive_group/src/share/: op.rs  prekeys.rs  store.rs
beehive_group/src/util/: non_empty_set.rs
beelay/beelay/: Cargo.toml
beelay/beelay-cli/: Cargo.toml
beelay/beelay-cli/src/: main.rs  peer_url.rs  serve.rs
beelay/beelay-core/: Cargo.toml
beelay/beelay-core/src/: auth.rs  beehive_sync.rs  blob.rs  channel.rs  commands.rs  commit.rs  config.rs  conn_info.rs  connection.rs  contact_card.rs  deser.rs  doc_state.rs  doc_status.rs  document_id.rs  documents.rs  driver.rs  effects.rs  endpoint.rs  event.rs  io.rs  jobs.rs  keyhive.rs  keyhive_storage.rs  keyhive_sync.rs  leb128.rs  lib.rs  listen.rs  loading.rs  log.rs  messages.rs  network.rs  notification_handler.rs  outbound_listens.rs  parse.rs  peer_address.rs  peer_id.rs  peer_status.rs  reachability.rs  request_handlers.rs  riblt.rs  (+16 more)
beelay/beelay-core/tests/: auth.rs  events.rs  forwarding.rs  keyhive_persistence.rs  listen.rs  sessions.rs  shutdown.rs  smoke.rs
beelay/beelay-wasm/: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
beelay/beelay-wasm/src/: add_member_args.rs  js_wrappers.rs  lib.rs  membered.rs  remove_member_args.rs  signer.rs  storage.rs  stream.rs  stream_config.rs  utils.rs
beelay/beelay-wasm/tests/: basic.spec.ts  mocha.setup.ts
beelay/beelay/src/: document.rs  fs_store.rs  lib.rs  runtime.rs  signing.rs  storage.rs  tokio.rs  websocket.rs
beelay/beelay/tests/: smoke.rs
from_js_ref/: Cargo.toml
from_js_ref/src/: lib.rs
keyhive_convert_derive/: Cargo.toml
keyhive_convert_derive/src/: lib.rs
keyhive_core/: Cargo.toml  README.md
keyhive_core/benches/: bench_cgka.rs  bench_cgka_propagation.rs  bench_ingest.rs  bench_ingest_unsorted_static_events.rs  bench_membership_ops_all.rs  bench_reachable_prekey_ops.rs  bench_reverse_topsort.rs  bench_toggling_delegate_revoke.rs  bench_utils.rs
keyhive_core/src/: ability.rs  access.rs  archive.rs  cgka.rs  contact_card.rs  content.rs  crypto.rs  debug_events.rs  event.rs  invocation.rs  join_semilattice.rs  keyhive.rs  lib.rs  listener.rs  stats.rs  store.rs  test_utils.rs  transact.rs  util.rs
keyhive_core/src/cgka/: README.md  archive.rs  beekem.rs  error.rs  keys.rs  operation.rs  secret_store.rs  test_utils.rs  treemath.rs
keyhive_core/src/content/: reference.rs
keyhive_core/src/crypto/: application_secret.rs  digest.rs  domain_separator.rs  encrypted.rs  envelope.rs  separable.rs  share_key.rs  signed.rs  signed_ext.rs  signer.rs  siv.rs  symmetric_key.rs  verifiable.rs
keyhive_core/src/debug_events/: hash.rs  terminal.rs
keyhive_core/src/event/: static.rs  static_event.rs  wire_event.rs
keyhive_core/src/listener/: cgka.rs  deque.rs  log.rs  membership.rs  no_listener.rs  prekey.rs  secret.rs
keyhive_core/src/principal/: active.rs  agent.rs  document.rs  group.rs  identifier.rs  individual.rs  membered.rs  peer.rs  public.rs
keyhive_core/src/store/: ciphertext.rs  delegation.rs  revocation.rs  secret_key.rs
keyhive_core/src/transact/: fork.rs  merge.rs
keyhive_core/src/util/: content_addressed_map.rs  debug.rs  hasher.rs  hex.rs  partial_eq.rs  topsort.rs
keyhive_core/tests/: add_member_deadlock.rs  encrypt.rs  transitive_access.rs
keyhive_wasm/: .gitignore  Cargo.toml  HACKING.md  README.md  build_slim.js  keyhive-keyhive-0.0.0-alpha.54i.tgz  package.json  pnpm-lock.yaml  tsconfig.slim.json
keyhive_wasm/e2e/: beehive.spec.ts  document.spec.ts  keyhive.spec.ts  signed.spec.ts  signer.spec.ts  signing_key.spec.ts
keyhive_wasm/e2e/server/: index.html  pkg
keyhive_wasm/src/: js.rs  lib.rs
keyhive_wasm/src/js/: access.rs  add_member_error.rs  agent.rs  all_agent_events.rs  archive.rs  base64.rs  capability.rs  cgka_operation.rs  change_id.rs  change_ref.rs  peer.rs  (+35 more)
sedimentree/: Cargo.toml
sedimentree/src/: blob.rs  commit_dag.rs  lib.rs  storage.rs
wasm_refgen/: Cargo.toml  README.md
wasm_refgen/src/: lib.rs
(+304 files in other folders)
