[workspace]
resolver = "2"
members = [
    "beehive_core",
    "beehive_wasm",
    "beelay/beelay-core",
]

[workspace.package]
authors = [
  "Alex Good <alex@memoryandthought.me>",
  "John Mumm",
  "Brooklyn Zelenka <hello@brooklynzelenka.com>",
]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/inkandswitch/beehive"
rust-version = "1.83.0"
version = "0.1.0"

[workspace.dependencies]
blake3 = "1.5"
chacha20poly1305 = "0.10.1"
dupe = "0.9.0"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
signature = "2.2"
thiserror = "1.0"
x25519-dalek = { version = "2.0", features = ["serde", "reusable_secrets", "static_secrets"] }
