[workspace]
resolver = "2"
members = [
    "beelay/beelay-core",
    "beelay/beelay-wasm",
    "keyhive_core",
    "keyhive_wasm",
    "test-utils",
]

[workspace.package]
authors = [
    "Alex Good <alex@memoryandthought.me>",
    "John Mumm",
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/inkandswitch/keyhive"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
bincode = "1.3"
blake3 = "1.5"
chacha20poly1305 = "0.10.1"
derive_more = { version = "1.0", features = [
    "from",
    "into",
    "try_into",
    "deref",
    "display",
    "debug",
] }
dupe = "0.9.0"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
futures = "0.3.31"
nonempty = { version = "0.10.0", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive", "rc"] }
signature = "2.2"
thiserror = "1.0"
tracing = "0.1.40"
x25519-dalek = { version = "2.0", features = [
    "serde",
    "reusable_secrets",
    "static_secrets",
] }
