[package]

name = "beehive_core"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Docs
aquamarine = { version = "0.6", optional = true }

# Encoding
bincode = "1.3"
serde = { workspace = true }

# Crypto
blake3 = "1.5"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
signature = "2.2"
x25519-dalek = { version = "2.0", features = ["getrandom", "serde", "static_secrets"] }

# Error Handling
thiserror = { workspace = true }

# Utilities
dupe = { workspace = true }
nonempty = "0.10.0"
rand = { workspace = true }
topological-sort = "0.2.2"

# Tests & Test Utils
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.5.0", optional = true }

[dev-dependencies]

divan = { version = "0.1.15" }

[features]

mermaid_docs = ["aquamarine"]
test_utils = ["proptest", "proptest-derive"]

[[bench]]

name = "bench_cgka"
harness = false
