[package]

name = "beehive_core"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Docs
aquamarine = { version = "0.6", optional = true }

# Encoding
bincode = "1.3"
serde = { workspace = true }

# Crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
signature = { workspace = true }
x25519-dalek = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Utilities
arraydeque = "0.5.1"
dupe = { workspace = true }
topological-sort =  "0.2"
nonempty = "0.10.0"

# Testing
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.5.0", optional = true }

[dev-dependencies]
# Benchmarks
divan = { version = "0.1.15" }

[features]

mermaid_docs = ["aquamarine"]
test_utils = ["proptest", "proptest-derive"]

[[bench]]

name = "bench_cgka"
harness = false
