[package]

name = "beehive_core"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Docs
aquamarine = { version = "0.6", optional = true }

# Encoding
bincode = "1.3"
serde = { workspace = true }

# Crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
signature = { workspace = true }
x25519-dalek = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Utilities
derivative = "2.2"
derive_more = { workspace = true }
dupe = { workspace = true }
topological-sort = "0.2"
nonempty = { workspace = true }

# Testing
proptest = { version = "1.5", optional = true }
proptest-derive = { version = "0.5.0", optional = true }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }

# Benchmarks
divan = "0.1.15"

# Test Helpers
pretty_assertions = "1.4"

[features]

mermaid_docs = ["aquamarine"]
test_utils = ["proptest", "proptest-derive"]

[[bench]]

name = "bench_cgka"
harness = false
required-features = ["test_utils"]
