[package]
name = "from_js_ref"
version = "0.1.0"
description = "Trait for converting from JS interface reference wrappers"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
