[package]
name = "keyhive_convert_derive"
version = "0.1.0"
description = "FIXME"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
keyhive_convert_core = { path = "../keyhive_convert_core" }

base64-simd = "0.8.0"
bincode = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
nonempty = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", optional = true }
tracing = { workspace = true }
tracing-wasm = { workspace = true }
rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "^0.1", optional = true }
js-sys = "^0.3"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.50"
proc-macro2 = "1.0"
quote = "1.0"
# syn = "2.0"
syn = { version = "2", features = ["full"] }
heck = "0.5"
