[package]
name = "keyhive_wasm"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
keyhive_core = { path = "../keyhive_core" }

bincode = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
ed25519-dalek = { workspace = true }
nonempty = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "^0.1", optional = true }
js-sys = "^0.3"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["Crypto", "console"] }

[profile.release]
wasm-opt = ["-Oz"]
lto = true

[features]
default = ["console_error_panic_hook"]
browser_test = []
