[package]
name = "keyhive_wasm"
version = "0.1.0"
description = "WebAssembly wrappers for beehive_core"

authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
keyhive_core = { path = "../keyhive_core" }

base64-simd = "0.8.0"
bincode = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
nonempty = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", optional = true }

rand = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "^0.1", optional = true }
js-sys = "^0.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Storage",
    "SubtleCrypto",
    "Window",
    "console",
]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[dev-dependencies.web-sys]
version = "0.3.77"
features = [
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Storage",
    "SubtleCrypto",
    "Window",
    "console",
]
optional = false

[profile.release]
wasm-opt = ["-Oz"]
lto = true

[features]
default = ["console_error_panic_hook", "web-sys", "json"]
browser_test = []
json = ["dep:serde_json"]
