[package]
name = "beelay-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
beelay = { path = "../beelay", features = ["tokio", "axum"] }
clap = { version = "4.5.17", features = ["derive"] }
ed25519-dalek.workspace = true
eyre = "0.6.12"
futures = "0.3.30"
rand.workspace = true
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rand.workspace = true
