[package]
name = "beelay-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bs58 = { version = "0.5.1", features = ["check"] }
futures = { workspace = true }
num = { version = "0.4.3", features = ["num-bigint"] }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
signature = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
bolero = { version = "0.11.1", features = ["arbitrary"] }
image = "0.24.7"
resvg = { version = "0.43.0", default-features = false, features = [
    "text",
    "system-fonts",
    "raster-images",
] }
termion = "4.0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
viuer = "0.7.1"
