[package]
name = "beelay-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sedimentree = { path = "../../sedimentree" }
bs58 = { version = "0.5.1", features = ["check"] }
futures = { workspace = true }
num.workspace = true
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
keyhive_core = { path = "../../keyhive_core", features = [
    "ingest_static",
] } # TODO: get rid of test_utils
bincode = "1.3"

# Crypto
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
dupe = { workspace = true }
ed25519-dalek.workspace = true
signature = { workspace = true }
x25519-dalek = { workspace = true }
nonempty = { workspace = true, features = ["arbitrary"] }

[dev-dependencies]
sedimentree = { path = "../../sedimentree", features = ["arbitrary"] }
keyhive_core = { path = "../../keyhive_core", features = [
    "arbitrary",
    "debug_events",
    "test_utils",
] }
beelay-core = { path = ".", features = ["debug_events"] }
test-utils = { path = "../../test-utils" }
arbitrary.workspace = true
bolero.workspace = true
image = "0.24.7"
lazy_static = "1.5.0"
nu-ansi-term = "0.50.1"
resvg = { version = "0.43.0", default-features = false, features = [
    "text",
    "system-fonts",
    "raster-images",
] }
termion = "4.0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
viuer = "0.7.1"

[features]
debug_events = ["keyhive_core/debug_events"]

[lints.clippy]
doc_overindented_list_items = "allow"
