[package]
name = "beelay-wasm"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beelay-core = { path = "../beelay-core" }
wasm-bindgen = "0.2.100"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
serde.workspace = true
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand.workspace = true
ed25519-dalek.workspace = true
wasm-bindgen-futures = "0.4.50"
futures.workspace = true
hex = "0.4.3"
serde_bytes = "0.11.17"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["console_error_panic_hook", "web-sys"]
web-sys = ["dep:web-sys"]
